--- a/demo/src/app/components/pessoas/pessoaslist/pessoaslist.component.html
+++ b/demo/src/app/components/pessoas/pessoaslist/pessoaslist.component.html
@@ -17,7 +17,8 @@
                         <th scope="row">{{ pessoa.id }}</th>
                         <td> {{ pessoa.nome }} </td>
                         <td> {{ pessoa.idade }} </td>
-                        <td> <button class="btn btn-primary" (click)="editar(modal1, pessoa, i)">Editar</button> </td>
+                        <td> <button class="btn btn-primary" (click)="editar(modal1, pessoa, i)">Editar</button>  <button class="btn btn-primary" (click)="deletar(pessoa)">Deletar</button> </td>
+
                     </tr>
                 </tbody>
             </table>
