Finalizado delete e edit de Carro e Livro

--- a/demo/src/app/components/layout/header/header.component.html
+++ b/demo/src/app/components/layout/header/header.component.html
@@ -10,6 +10,11 @@
             <a class="nav-link active" aria-current="page" href="/admin/pessoas">Pessoas</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/admin/livros">Livros</a>
+          </li>          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/admin/carros">Carros</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/login">Sair</a>
           </li>
         </ul>
